feat: refatoração nos files Java